# ClawController

./: .gitignore  AGENT_MANAGEMENT_ENHANCEMENT.md  CNAME  Dockerfile.dev  OPENCLAW_INTEGRATION_GUIDE.md  OPTIMIZATION_REPORT.md  README.md  USER_EXPERIENCE_ENHANCEMENT.md  ajuste.md  install.sh  package.json  start.sh
backend/: CLAWCONTROLLER_TEST_REPORT.md  COMPLETION_STATUS.md  Cargo.toml  FINAL_FIXES.md  IMPLEMENTATION_PLAN.md  OPENCLAW_AGENT_ANALYSIS.md  QUICK_FIX_GUIDE.md  TEST_SUITE.rs  gateway_watchdog.py  main.py  models.py  stuck_task_monitor.py
backend/.sqlx/: config.json  query-126ac9250fe91e1ef724988e0c545de1c78c90da05d1c45852d6e44cc8fe4b1a.json  query-41b1a7a9121dfcf3c6c6bc1f0b886ff85199b1f71a96c4ca30bd45b05721b489.json  query-dcc6074c3318a28d5b32ba3f0ee1e6bff29295f2b4081245afef815d5ffe6bb8.json
backend/migrations/: 001_initial_schema.sql
backend/src/: agent_management.rs  agent_management_db.rs  agent_management_impl.rs  agent_management_ux.rs  audit.rs  db.rs  main.rs  models.rs  openclaw_advanced_features.rs  openclaw_integration.rs  openclaw_integration_helpers.rs  openclaw_integration_original.rs  openclaw_monitoring.rs  openclaw_optimization.rs  security.rs  validation.rs  validation_broken.rs
backend/tests/: common.rs  integration_tests.rs  mod.rs  performance_tests.rs  security_tests.rs
docs/: en.html  es.html  index.html
docs/_astro/: index.6IQJI-Xh.css
frontend/: .npmrc  Cargo.toml  build.rs  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.jsx  api.js  i18n-config.js  lib.rs  main.jsx  main.rs
frontend/src/components/: AddAgentWizard.jsx  AgentEditModal.jsx  AgentManagement.jsx  AgentSidebar.jsx  AnnouncementModal.jsx  ChatWidget.jsx  GatewayWatchdog.css  GatewayWatchdog.jsx  Header.jsx  ImportAgentsDialog.jsx  KanbanBoard.jsx  KanbanColumn.jsx  LanguageSelector.jsx  LiveFeed.jsx  NewTaskModal.jsx  RecurringTasksPanel.jsx  StatusPage.jsx  StuckTaskMonitor.jsx  TaskCard.jsx  TaskModal.jsx  agent_card.rs  layout.rs  mod.rs  navigation.rs  status_badge.rs  task_list.rs  websocket_manager.rs
frontend/src/components/__tests__/: SmokeTest.test.jsx
frontend/src/i18n/: index.js  pt-config.js
frontend/src/i18n/locales/: en.json  es.json  pt.json
frontend/src/pages/: agents.rs  dashboard.rs  mod.rs  settings.rs  tasks.rs
frontend/src/services/: api.rs  auth.rs
frontend/src/store/: useMissionStore.js
frontend/src/utils/: time.js
