[package]
name = "clawcontroller-frontend"
version = "1.1.3"
edition = "2021"

[dependencies]
# Web framework for frontend
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

# WASM build
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
uuid = { version = "1.0", features = ["v4", "serde", "wasm-bindgen"] }
anyhow = "1.0"

# UI components
gloo-net = "0.5"
gloo-storage = "0.3"
gloo-utils = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "Event",
  "EventTarget",
  "MouseEvent",
  "KeyboardEvent",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "BinaryType",
  "Blob",
  "File",
  "FileList",
  "DataTransfer",
  "DragEvent",
  "FocusEvent",
  "InputEvent",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "HtmlFormElement",
  "HtmlButtonElement",
  "HtmlDivElement",
  "HtmlSpanElement",
  "HtmlAnchorElement",
  "HtmlImageElement",
  "HtmlTableElement",
  "HtmlTableRowElement",
  "HtmlTableCellElement",
  "HtmlHeadElement",
  "HtmlBodyElement",
  "HtmlTitleElement",
  "HtmlMetaElement",
  "HtmlLinkElement",
  "HtmlStyleElement",
  "HtmlScriptElement",
  "HtmlIFrameElement",
  "HtmlCanvasElement",
  "HtmlVideoElement",
  "HtmlAudioElement",
  "HtmlSourceElement",
  "HtmlTrackElement",
  "HtmlMapElement",
  "HtmlAreaElement",
  "HtmlBaseElement",
  "HtmlQuoteElement",
  "HtmlModElement",
  "HtmlProgressElement",
  "HtmlMeterElement",
  "HtmlOutputElement",
  "HtmlDetailsElement",
  "HtmlDialogElement",
  "HtmlTemplateElement",
  "HtmlSlotElement",
  "HtmlOptGroupElement",
  "HtmlPictureElement",
  "HtmlParamElement",
  "HtmlObjectElement",
  "HtmlEmbedElement",
  "HtmlFrameElement",
  "HtmlIFrameElement",
  "HtmlFrameSetElement",
  "HtmlNoFramesElement",
  "HtmlNoEmbedElement",
  "HtmlNoScriptElement",
  "HtmlUnknownElement",
  "HtmlCollection",
  "NodeList",
  "HtmlOptionsCollection",
  "DomTokenList",
  "DomStringMap",
  "RadioNodeList",
  "StyleSheetList",
  "CssRuleList",
  "CssStyleDeclaration",
  "CssStyleSheet",
  "MediaList",
  "StyleSheet",
  "CssRule",
  "CssStyleRule",
  "CssImportRule",
  "CssMediaRule",
  "CssNamespaceRule",
  "CssPageRule",
  "CssKeyframesRule",
  "CssKeyframeRule",
  "CssSupportsRule",
  "CssCounterStyleRule",
  "CssFontFaceRule",
  "CssViewportRule",
  "MutationObserver",
  "MutationRecord",
  "Node",
  "Element",
  "Attr",
  "CharacterData",
  "Text",
  "Comment",
  "CdataSection",
  "DocumentType",
  "DocumentFragment",
  "ProcessingInstruction",
  "EntityReference",
  "Entity",
  "Notation",
  "ShadowRoot",
  "HtmlElement",
  "HtmlHeadElement",
  "HtmlTitleElement",
  "HtmlBaseElement",
  "HtmlLinkElement",
  "HtmlMetaElement",
  "HtmlStyleElement",
  "HtmlBodyElement",
  "HtmlHeadingElement",
  "HtmlParagraphElement",
  "HtmlHrElement",
  "HtmlPreElement",
  "HtmlBlockquoteElement",
  "HtmlOlElement",
  "HtmlUListElement",
  "HtmlMenuElement",
  "HtmlDListElement",
  "HtmlDivElement",
  "HtmlAnchorElement",
  "HtmlAreaElement",
  "HtmlBrElement",
  "HtmlDataElement",
  "HtmlDataListElement",
  "HtmlDetailsElement",
  "HtmlDialogElement",
  "HtmlDirectoryElement",
  "HtmlFieldSetElement",
  "HtmlFontElement",
  "HtmlFormElement",
  "HtmlFrameElement",
  "HtmlFrameSetElement",
  "HtmlHeadElement",
  "HtmlHeadingElement",
  "HtmlHrElement",
  "HtmlHtmlElement",
  "HtmlIFrameElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlLabelElement",
  "HtmlLegendElement",
  "HtmlLiElement",
  "HtmlLinkElement",
  "HtmlMapElement",
  "HtmlMarqueeElement",
  "HtmlMenuElement",
  "HtmlMetaElement",
  "HtmlMeterElement",
  "HtmlModElement",
  "HtmlNoEmbedElement",
  "HtmlNoFramesElement",
  "HtmlNoScriptElement",
  "HtmlObjectElement",
  "HtmlOlElement",
  "HtmlOptGroupElement",
  "HtmlOptionElement",
  "HtmlParagraphElement",
  "HtmlParamElement",
  "HtmlPictureElement",
  "HtmlPreElement",
  "HtmlProgressElement",
  "HtmlQuoteElement",
  "HtmlScriptElement",
  "HtmlSelectElement",
  "HtmlSlotElement",
  "HtmlSourceElement",
  "HtmlSpanElement",
  "HtmlStyleElement",
  "HtmlTableCaptionElement",
  "HtmlTableCellElement",
  "HtmlTableColElement",
  "HtmlTableElement",
  "HtmlTableRowElement",
  "HtmlTableSectionElement",
  "HtmlTemplateElement",
  "HtmlTextAreaElement",
  "HtmlTimeElement",
  "HtmlTitleElement",
  "HtmlTrackElement",
  "HtmlUListElement",
  "HtmlUnknownElement",
  "HtmlVideoElement",
  "HtmlAudioElement",
  "HtmlMediaElement",
]

[features]
default = ["console_error_panic_hook"]
hydrate = ["leptos/hydrate", "leptos_axum"]
ssr = ["leptos/ssr"]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
